--- a/nextflow.config
+++ b/nextflow.config
@@ -1,4 +1,7 @@
-conda.enabled = true
-docker.enabled = false
-singularity.enabled = false
 apptainer.enabled = true
+conda.enabled = false
+
+process {
+    container = 'oras://docker.io/dmitrymyl/peakflow-apptainer:latest'
+    conda = './conda.yml'
+}
