--- a/nextflow.config
+++ b/nextflow.config
@@ -1,11 +1,13 @@
 params {
     outdir = null
     tracedir = "${params.outdir}/pipeline_info"
+    custom_config_version = 'master'
+    custom_config_base = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
 }
 
 
 try {
-    includeConfig "https://raw.githubusercontent.com/nf-core/configs/master/nfcore_custom.config"
+    includeConfig "${params.custom_config_base}/nfcore_custom.config"
 } catch (Exception e) {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
