Added ps to container to enable tracing

--- a/nextflow.config
+++ b/nextflow.config
@@ -41,14 +41,14 @@ process {
 }
 
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
-// timeline {
-//     enabled = true
-//     file    = "${params.tracedir}/execution_timeline_${trace_timestamp}.html"
-// }
-// report {
-//     enabled = true
-//     file    = "${params.tracedir}/execution_report_${trace_timestamp}.html"
-// }
+timeline {
+    enabled = true
+    file    = "${params.tracedir}/execution_timeline_${trace_timestamp}.html"
+}
+report {
+    enabled = true
+    file    = "${params.tracedir}/execution_report_${trace_timestamp}.html"
+}
 trace {
     enabled = true
     file    = "${params.tracedir}/execution_trace_${trace_timestamp}.txt"
