--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,6 @@
+nextflow.enable.dsl = 2
+
+// define default parameters
 params {
     outdir = null
     tracedir = "${params.outdir}/pipeline_info"
@@ -5,21 +8,23 @@ params {
     custom_config_base = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
 }
 
-
+// include institute-specific configs from nf-core
 try {
     includeConfig "${params.custom_config_base}/nfcore_custom.config"
 } catch (Exception e) {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
+// include local config
 profiles {
     local {
         includeConfig 'conf/local.config'
     }
 }
 
+// define resource requirements and container
 process {
-    container = 'oras://docker.io/dmitrymyl/peakflow-apptainer:latest'
+    container = 'oras://docker.io/gerlichlab/peakflow-apptainer:latest'
     conda = './conda.yml'
     errorStrategy = { task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
     maxRetries = 1
@@ -40,6 +45,7 @@ process {
     }
 }
 
+// enable tracing and reporting
 def trace_timestamp = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')
 timeline {
     enabled = true
