Linting and comments

--- a/conf/local.config
+++ b/conf/local.config
@@ -1,8 +1,12 @@
+/*
+Environment configuration for Nextflow pipeline.
+Locally, user is supposed to use apptainer containers and not conda.
+*/
 apptainer.enabled = true
-conda.enabled = false
+conda.enabled     = false
 
 params {
-    params.max_time = 2.h
-    params.max_cpus = 2
+    params.max_time   = 2.h
+    params.max_cpus   = 2
     params.max_memory = 2.GB
 }
