--- a/nextflow.config
+++ b/nextflow.config
@@ -2,32 +2,32 @@ nextflow.enable.dsl = 2
 
 // define default parameters
 params {
-    outdir = null
-    tracedir = "${params.outdir}/pipeline_info"
+    outdir                = './results'
+    tracedir              = "${params.outdir}/pipeline_info"
     custom_config_version = 'master'
-    custom_config_base = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
+    custom_config_base    = "https://raw.githubusercontent.com/nf-core/configs/${params.custom_config_version}"
 }
 
 // include institute-specific configs from nf-core
 try {
     includeConfig "${params.custom_config_base}/nfcore_custom.config"
-} catch (Exception e) {
+} catch ( Exception e ) {
     System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
 }
 
-// include local config
+// include config for the local profile
 profiles {
     local {
         includeConfig 'conf/local.config'
     }
 }
 
-// define resource requirements and container
+// define resource requirements and the container path
 process {
-    container = 'oras://docker.io/gerlichlab/peakflow-apptainer:latest'
-    conda = './conda.yml'
+    container     = 'oras://docker.io/gerlichlab/peakflow-apptainer:latest'
+    conda         = './conda.yml'
     errorStrategy = { task.exitStatus in [143,137,104,134,139] ? 'retry' : 'finish' }
-    maxRetries = 1
+    maxRetries    = 1
     withLabel: 'quick' {
         cpus   = { check_max( 1,                    'cpus'   ) }
         memory = { check_max( 1.GB,                 'memory' ) }
@@ -62,6 +62,17 @@ trace {
 dag {
     enabled = true
     file    = "${params.tracedir}/pipeline_dag_${trace_timestamp}.html"
+}
+
+// Pipeline manifest
+manifest {
+    author          = 'Dmitry Mylarshchikov'
+    description     = 'Peakflow is a simple pipeline for calling peaks and producing tracks with read extension from ChIP-seq data'
+    homePage        = 'github.com/dmitrymyl/peakflow'
+    name            = 'peakflow'
+    nextflowVersion = '>=23.10, <25.06'
+    mainScript      = 'main.nf'
+    defaultBranch   = 'main'
 }
 
 /* 
